# Forbidden-Paradise-Graphics

./: .gitignore  Forbidden-Paradise-Graphics.py  ForbiddenParadiseGraphics.spec  NYO_CharacterPicture.js  __main__.spec  pyproject.toml
img_main/characters/: !Flame_AltColor3.png_
img_main/characters/monsters/: caterpillar!.png_  creepingShadow_blueEyes!.png_  creepingShadow_purpleEyes!.png_  enemy_bandit1!.png_  secunda!.png_
img_main/characters/npc/: lily_at_home1!.png_
img_main/characters/objects/: !$boulders1.png_  !$fences.png_  !$lights_forest.png_  !$objects_caveB_medium.png_  !$objects_city_medium_tall.png_  !$objects_fantasia_tall.png_  !$objects_forest_medium.png_  !$objects_medium_tall.png_  (+10 more)
img_main/parallaxes/: StarRiver.png_  analyzing.png_
img_main/pictures/: aphroBall(12.4).png_  aura_blaze(4.8).png_  blancheWalk(4.12).png_  cp1_d9(4.8).png_  cp2_d3(4.8).png_  cp3_d2(4.8).png_  invul(4.1).png_  webBullet(4.2).png_
img_main/system/: ButtonIcons.png_  EyeIcon.png_  bondingTimeCommands.png_  expressions_highres.png_
img_main/tilesets/: Alien_Landscape_A2.png_  Alien_Landscape_C_Plants.png_  akumu_A2.png_  city_ext_custom_A1.png_  fsm_Dungeon02_C.png_  roomObjectsCustom.png_
src/Forbidden_Paradise_Graphics/: __main__.py  character_editor.py  character_renderer - Copy.py  character_renderer.py  main.py
src/Forbidden_Paradise_Graphics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: JScode.js  Python_code.py  check_material_consistency.py  check_property_consistency.py  get_used_materials.py  get_used_properties.py  test.py
(+516 files in other folders)
